src/test/deca/codegen/valid/cmp-classes.deca
class A {}
class B {}

{
    A a = new A();
    B b = new B();
    if (a == a) {
        println("ok");
    }
}