src/test/deca/codegen/invalid/cast-error.deca
class A{
}

class B extends A{
}

{
	A a = new A();
	(B)(a);
}
